--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-deliveryNoteBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-deliveryNoteBody.vm
@@ -82,7 +82,7 @@ p.western {
       <td colspan="2" width="60" align="center"><font font size="6" style="font-size: 22pt"> <strong> &nbsp; </strong> </font></td>
     </tr>
        <tr>
-      <td align="right">ETA Date:$!{ctx.order.pickUpdate}</td>
+      <td align="right">ETA Date:$!{ctx.order.waitDeliveiedDate}</td>
     </tr>
     <tr>
       <td>PO: ${ctx.order.code}</td>
