--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-releaseNoteBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-releaseNoteBody.vm
@@ -105,7 +105,7 @@ p.western {
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td colspan="2">Customer: ${ctx.customer.name}</td>
+      <td colspan="2">Customer: ${ctx.customer.companyName}</td>
       <td>&nbsp;</td>
     </tr>
     <tr>
