pdf生成器和pdf附件email

--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-releaseNoteBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-releaseNoteBody.vm
@@ -195,7 +195,7 @@ p.western {
 			</tr>
 			#else
 			<tr>
-			  <td colspan="3" width="383" height="3" class="table2"> Subtotal </td>
+			  <td colspan="3" width="383" height="3" class="table2">    </td>
 			  <td width="51"  class="table2"> ${item.quantity} </td>
 			  <td width="58"  class="table2"> $!{item.netWeight} </td>
 			  <td width="88"  class="table2"> $!{item.grossWeight} </td>
