--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-F.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-F.vm
@@ -64,7 +64,8 @@ p.western {
 		</td>
          <td width="25%">&nbsp;</td>
          <td   align="left" >
-            <font face="Arial, serif" size="4" style="font-size: 14pt; color: #8C8C8C;"><em><strong>ACERCHEM UK LTD</strong></em></font><br/><br/>
+		 <br/>
+            <font face="Arial, serif" size="4" style="font-size: 14pt; color: #8C8C8C;"><em><strong>ACERCHEM UK LTD</strong></em></font><br/>
             <font face="Arial, serif" size="2" style="font-size: 11pt; color: #ACACAB;">Add.: SINGLETON PARK, SWANSEA</font><br/>
             <font face="Arial, serif" size="2" style="font-size: 11pt; color: #A9A9A9;">SA2 8PP, WALES, UK</font><br/>
             <font face="Arial, serif" size="2" style="font-size: 11pt; color: #A9A9A9;">Tel: +44 (0) 1639 792295</font>
@@ -74,7 +75,7 @@ p.western {
         <td style="border-top:#cccccc solid 1px;border-bottom:#cccccc solid 1px;"
 		colspan="4"><font color="#8E8989">
         ACERCHEM UK LTD .VAT No.:GB111785918
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   
         ACERCHEM UK LTD .Company No.:07460051 	
         </font></td>
       </tr>
@@ -296,7 +297,8 @@ p.western {
 		</td>
          <td width="25%">&nbsp;</td>
          <td   align="left" >
-            <font face="Arial, serif" size="4" style="font-size: 14pt; color: #8C8C8C;"><em><strong>ACERCHEM UK LTD</strong></em></font><br/><br/>
+		 <br/>
+            <font face="Arial, serif" size="4" style="font-size: 14pt; color: #8C8C8C;"><em><strong>ACERCHEM UK LTD</strong></em></font><br/>
             <font face="Arial, serif" size="2" style="font-size: 11pt; color: #ACACAB;">Add.: SINGLETON PARK, SWANSEA</font><br/>
             <font face="Arial, serif" size="2" style="font-size: 11pt; color: #A9A9A9;">SA2 8PP, WALES, UK</font><br/>
             <font face="Arial, serif" size="2" style="font-size: 11pt; color: #A9A9A9;">Tel: +44 (0) 1639 792295</font>
@@ -306,7 +308,7 @@ p.western {
         <td style="border-top:#cccccc solid 1px;border-bottom:#cccccc solid 1px;"
 		colspan="4"><font color="#8E8989">
         ACERCHEM UK LTD .VAT No.:GB111785918
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    
         ACERCHEM UK LTD .Company No.:07460051 	
         </font></td>
       </tr>
