--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoiceBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoiceBody.vm
@@ -74,7 +74,7 @@ p.western {
         <td style="border-top:#cccccc solid 1px;border-bottom:#cccccc solid 1px;"
 		colspan="4"><font color="#8E8989">
         ACERCHEM UK LTD .VAT No.:GB111785918
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     
         ACERCHEM UK LTD .Company No.:07460051 	
         </font></td>
       </tr>
@@ -94,8 +94,8 @@ p.western {
       <font size="6" style="font-size: 22pt"> <strong> INVOICE </strong> </font>
       </td>
     </tr>
-    <tr>
-      <td colspan="2" align="center"><font size="6" style="font-size: 22pt"> <strong> &nbsp; </strong> </font></td>
+     <tr height="10">
+      <td colspan="2" align="center">&nbsp; </td>
     </tr>
      <tr>
       <td>INVOICE NO.: ${ctx.order.code}</td>
