--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-D.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-invoicePackingListBody-D.vm
@@ -64,7 +64,8 @@ p.western {
 		</td>
          <td width="25%">&nbsp;</td>
          <td   align="left" >
-            <font face="Arial, serif" size="4" style="font-size: 14pt; color: #8C8C8C;"><em><strong>ACERCHEM UK LTD</strong></em></font><br/><br/>
+		 <br/>
+            <font face="Arial, serif" size="4" style="font-size: 14pt; color: #8C8C8C;"><em><strong>ACERCHEM UK LTD</strong></em></font><br/>
             <font face="Arial, serif" size="2" style="font-size: 11pt; color: #ACACAB;">Add.: SINGLETON PARK, SWANSEA</font><br/>
             <font face="Arial, serif" size="2" style="font-size: 11pt; color: #A9A9A9;">SA2 8PP, WALES, UK</font><br/>
             <font face="Arial, serif" size="2" style="font-size: 11pt; color: #A9A9A9;">Tel: +44 (0) 1639 792295</font>
@@ -74,7 +75,7 @@ p.western {
         <td style="border-top:#cccccc solid 1px;border-bottom:#cccccc solid 1px;"
 		colspan="4"><font color="#8E8989">
         ACERCHEM UK LTD .VAT No.:GB111785918
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
         ACERCHEM UK LTD .Company No.:07460051 	
         </font></td>
       </tr>
@@ -94,7 +95,9 @@ p.western {
       <font size="6" style="font-size: 22pt"> <strong> INVOICE </strong> </font>
       </td>
     </tr>
-    
+     <tr height="10">
+      <td colspan="2" align="center">&nbsp; </td>
+    </tr>
     <tr>
       <td>INVOICE NO.:  ${ctx.order.code}</td>
       <td>&nbsp;</td>
@@ -110,25 +113,13 @@ p.western {
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>$!{ctx.customerAddressData.town}</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>$!{ctx.customerAddressData.region}</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>$!{ctx.customerAddressData.country}</td>
-      <td>&nbsp;</td>
+      <td colspan="2">Adress: $!{ctx.customerAddress}</td>
     </tr>
     <tr>
       <td>VAT: $!{ctx.customer.vatNo}</td>
       <td>&nbsp;</td>
     </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
+    
     <tr>
       <td colspan="2">V.A.T Transferred article 138 Council Directive 2006/112/EC</td>
       
@@ -136,20 +127,17 @@ p.western {
     <tr>
       <td colspan="2">Neele-Vat Warehousing BV, Bierbrouwerstraat 2, 3194 AP Hoogvliet Rotterdam, The Netherlands, NL804421390B02 acting as limited fiscal representative: ACERCHEM UK LTD.</td>
     </tr>
+    
     <tr>
-      <td></td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>SHIP FROM: $!{ctx.warehouse}</td>
+      <td width="50%">SHIP FROM: $!{ctx.warehouse}</td>
       <td >SHIP TO: $!{ctx.shipto}</td>
     </tr>
     <tr>
-      <td>Terms: $!{ctx.paymentTerms} </td>
+      <td width="50%">Terms: $!{ctx.paymentTerms} </td>
       <td >Currency: USD</td>
     </tr>
     <tr>
-      <td >ACERCHEM UK LTD .VAT No.:GB111785918  </td>
+      <td width="50%">ACERCHEM UK LTD .VAT No.:GB111785918  </td>
       <td >ACERCHEM UK LTD. Company No.:07460051</td>
     </tr>
   </tbody>
@@ -197,12 +185,9 @@ p.western {
   <tr class="font1" align="center">
     <td colspan="2">*** This shipment contains NO solid wood packaging materials***</td>
   </tr>
-   <tr class="font1" align="center">
-    <td colspan="2">&nbsp;</td>
-  </tr>
-
+  
   <tr class="font1">
-    <td colspan="2">Please wire transfer the above amount to:</td>
+    <td colspan="2"> <strong>Please wire transfer the above amount to: </strong></td>
   </tr>
   <tr class="font1">
     <td width="117">
@@ -236,12 +221,14 @@ p.western {
   </tr>
     <tr class="font1">
     <td colspan="2">
-    Banker's Address: 1 Alexandra Road Gorseinon, Swansea SA4 4NJ
+    <strong> Banker's Address: </strong> 1 Alexandra Road Gorseinon, Swansea SA4 4NJ
     </td>
   </tr>
     <tr class="font1">
     <td>
+	 <strong>
     SWIFT:
+	 </strong>
     </td>
     <td>
     MIDLGB22
@@ -249,15 +236,17 @@ p.western {
   </tr>
     <tr class="font1">
     <td>
+	 <strong>
     Sort code: 
+	 </strong>
     </td>
     <td>
     400515
     </td>
   </tr>
-    <tr class="font1">
+   <tr class="font1">
     <td colspan="2">
-    IBAN: GB59MIDL40051571554850
+     <strong>IBAN:  </strong>GB59MIDL40051571554850
     </td>
   </tr>
   <tr class="font1">
@@ -299,7 +288,8 @@ p.western {
 		</td>
          <td width="25%">&nbsp;</td>
          <td   align="left" >
-            <font face="Arial, serif" size="4" style="font-size: 14pt; color: #8C8C8C;"><em><strong>ACERCHEM UK LTD</strong></em></font><br/><br/>
+		 <br/>
+            <font face="Arial, serif" size="4" style="font-size: 14pt; color: #8C8C8C;"><em><strong>ACERCHEM UK LTD</strong></em></font><br/>
             <font face="Arial, serif" size="2" style="font-size: 11pt; color: #ACACAB;">Add.: SINGLETON PARK, SWANSEA</font><br/>
             <font face="Arial, serif" size="2" style="font-size: 11pt; color: #A9A9A9;">SA2 8PP, WALES, UK</font><br/>
             <font face="Arial, serif" size="2" style="font-size: 11pt; color: #A9A9A9;">Tel: +44 (0) 1639 792295</font>
@@ -309,7 +299,7 @@ p.western {
         <td style="border-top:#cccccc solid 1px;border-bottom:#cccccc solid 1px;"
 		colspan="4"><font color="#8E8989">
         ACERCHEM UK LTD .VAT No.:GB111785918
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    
         ACERCHEM UK LTD .Company No.:07460051 	
         </font></td>
       </tr>
@@ -377,16 +367,16 @@ p.western {
 </table>
 
 #if ($ctx.append.productLists.size() > 0)
-  <table class="table3" width="700" border="1" cellpadding="1" cellspacing="0" align="center" style="text-align: center; border-collapse: collapse" bordercolor="#000000">
+  <table class="font1" width="700" border="1" cellpadding="1" cellspacing="0" align="center" style="text-align: center; border-collapse: collapse" bordercolor="#000000">
     <tr>
-      <td width="67" height="7" class="table2">Product name</td>
+      <td width="67" height="7" >Product name</td>
       
-      <td width="82" class="table2">Batch No.</td>
-      <td width="51" class="table2" > Quantity<br/>
+      <td width="82" >Batch No.</td>
+      <td width="51"  > Quantity<br/>
         (Drum) </td>
-      <td width="58" class="table2" > Netweight<br/>
+      <td width="58"  > Netweight<br/>
         (KGS) </td>
-      <td width="56" class="table2">Gross
+      <td width="56" >Gross
         Weight<br/>
         (KGS) </td>
     </tr>
@@ -405,10 +395,10 @@ p.western {
 	#end
 	#if(${ctx.append.totalData})
 			<tr>
-			  <td colspan="2" align="center" class="table2"> Total </td>
-			  <td width="51" class="table2" > $!{ctx.append.totalData.quantity} </td>
-			  <td width="58" class="table2"> $!{ctx.append.totalData.netWeight} </td>
-			  <td width="88" class="table2"> $!{ctx.append.totalData.grossWeight} </td>
+			  <td colspan="2" align="center" > Total </td>
+			  <td width="51"  > $!{ctx.append.totalData.quantity} </td>
+			  <td width="58" > $!{ctx.append.totalData.netWeight} </td>
+			  <td width="88" > $!{ctx.append.totalData.grossWeight} </td>
 			</tr>
 		
    #end
@@ -424,27 +414,27 @@ p.western {
    		<tbody>
    			<tr>
    				<td>
-   					PACKING: $!{ctx.upperCasePackageWeightArray}; TOTAL PACKED IN $!{ctx.append.totalData.packingCount} PACKAGES
+   					 <strong>PACKING: </strong> $!{ctx.upperCasePackageWeightArray}; TOTAL PACKED IN $!{ctx.append.totalData.packingCount} PACKAGES
    				</td>
    			</tr>
    			<tr>
    				<td>
-   					Net Weight: $!{ctx.append.totalData.netWeight} KGS.
+   					 <strong>Net Weight: </strong> $!{ctx.append.totalData.netWeight} KGS.
    				</td>
    			</tr>
    			<tr>
    				<td>
-   					Gross Weight: $!{ctx.append.totalData.grossWeight}KGS.
+   					 <strong>Gross Weight: </strong> $!{ctx.append.totalData.grossWeight}KGS.
    				</td>
    			</tr>
    			<tr>
    				<td>
-   					SHIPPING MARKS: N/M
+   					 <strong>SHIPPING MARKS: </strong> N/M
    				</td>
    			</tr>
    			<tr>
    				<td>
-   					PO NO.: $!{ctx.append.totalData.poNo}
+   					 <strong>PO NO.:  </strong>$!{ctx.append.totalData.poNo}
    				</td>
    			</tr>
 			<tr class="font1">
