modify gerneral css

--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
@@ -3212,3 +3212,8 @@ display: inline-table;
 #cboxLoadedContent{padding:0; margin:0;}
 #cboxContent{background-color:transparent;}
 #colorbox{background-color:rgba(0,26,15,.7)}
+
+
+#cboxClose {
+  display: none
+}
